# Ride-Share

./: .gitignore  Pipfile  Procfile  README.md  data.json  manage.py  pyproject.toml  requirements.txt
ride/: admin.py  apps.py  choices.py  forms.py  models.py  tasks.py  urls.py  views.py
ride/migrations/: 0001_initial.py  0002_alter_ridehost_contact.py  0002_auto_20211128_2325.py  0002_profile.py  0002_ridepool.py  0003_alter_ridehost_contact.py  0003_auto_20211218_1911.py  0003_ridehost_status.py  0003_ridepool_update_time.py  0004_auto_20211125_1050.py  0004_auto_20211127_2231.py  0004_auto_20211129_1331.py  0005_alter_ridehost_start_time.py
ride/templates/account/: email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  profile.html  signup.html
ride/templates/ride/: HostRideEdit.html  createride.html  dashboard.html  home.html  landing_page.html  mail_cancel_template.html  mail_template.html
rideshare/: celery.py  settings.py  urls.py
rideshare/static/css/: Highlight-Phone.css  fonts.css  styles.css
rideshare/templates/: base.html  messages.html
